crates/valen-parser/tests/snapshots/parser__deref_expr.snap
---
source: crates/valen-parser/tests/parser.rs
assertion_line: 482
expression: "check(\"fn f(r: ref mut Int) -> Int { *r }\")"
---
=== AST ===
[
    Fn(
        FnDecl {
            annotations: [],
            visibility: Internal,
            name: "f",
            generics: [],
            params: [
                Param {
                    name: "r",
                    ty: RefMut {
                        inner: Path(
                            TypePath {
                                segments: [
                                    TypePathSegment {
                                        name: "Int",
                                        generics: [],
                                        span: Span {
                                            start: 16,
                                            end: 19,
                                            file_id: FileId(
                                                0,
                                            ),
                                        },
                                    },
                                ],
                                span: Span {
                                    start: 16,
                                    end: 19,
                                    file_id: FileId(
                                        0,
                                    ),
                                },
                            },
                        ),
                        span: Span {
                            start: 8,
                            end: 19,
                            file_id: FileId(
                                0,
                            ),
                        },
                    },
                    mutable: false,
                    default: None,
                    span: Span {
                        start: 5,
                        end: 19,
                        file_id: FileId(
                            0,
                        ),
                    },
                },
            ],
            return_type: Some(
                Path(
                    TypePath {
                        segments: [
                            TypePathSegment {
                                name: "Int",
                                generics: [],
                                span: Span {
                                    start: 24,
                                    end: 27,
                                    file_id: FileId(
                                        0,
                                    ),
                                },
                            },
                        ],
                        span: Span {
                            start: 24,
                            end: 27,
                            file_id: FileId(
                                0,
                            ),
                        },
                    },
                ),
            ),
            body: Some(
                Block {
                    stmts: [],
                    tail: Some(
                        Deref(
                            DerefExpr {
                                expr: Path(
                                    Path {
                                        segments: [
                                            PathSegment {
                                                name: "r",
                                                double_colon: false,
                                                generics: [],
                                                span: Span {
                                                    start: 31,
                                                    end: 32,
                                                    file_id: FileId(
                                                        0,
                                                    ),
                                                },
                                            },
                                        ],
                                        span: Span {
                                            start: 31,
                                            end: 32,
                                            file_id: FileId(
                                                0,
                                            ),
                                        },
                                    },
                                ),
                                span: Span {
                                    start: 30,
                                    end: 32,
                                    file_id: FileId(
                                        0,
                                    ),
                                },
                            },
                        ),
                    ),
                    span: Span {
                        start: 28,
                        end: 34,
                        file_id: FileId(
                            0,
                        ),
                    },
                },
            ),
            is_open: false,
            is_override: false,
            is_abstract: false,
            is_unsafe: false,
            is_inline: false,
            span: Span {
                start: 0,
                end: 34,
                file_id: FileId(
                    0,
                ),
            },
        },
    ),
]
=== diagnostics ===
(none)
