crates/valen-parser/tests/snapshots/parser__empty_class.snap
---
source: crates/valen-parser/tests/parser.rs
expression: "check(\"class Foo {}\")"
---
=== AST ===
[
    Class(
        ClassDecl {
            annotations: [],
            visibility: Internal,
            kind: Final,
            name: "Foo",
            generics: [],
            ctor_params: [],
            supertypes: [],
            derives: [],
            body: [],
            span: Span {
                start: 0,
                end: 12,
                file_id: FileId(
                    0,
                ),
            },
        },
    ),
]
=== diagnostics ===
(none)
