crates/valen-parser/tests/snapshots/parser__empty_fn.snap
---
source: crates/valen-parser/tests/parser.rs
expression: "check(\"fn main() {}\")"
---
=== AST ===
[
    Fn(
        FnDecl {
            visibility: Internal,
            name: "main",
            generics: [],
            params: [],
            return_type: None,
            body: Some(
                Block {
                    stmts: [],
                    tail: None,
                    span: Span {
                        start: 10,
                        end: 12,
                        file_id: FileId(
                            0,
                        ),
                    },
                },
            ),
            is_open: false,
            is_override: false,
            is_abstract: false,
            span: Span {
                start: 0,
                end: 12,
                file_id: FileId(
                    0,
                ),
            },
        },
    ),
]
=== diagnostics ===
(none)
