crates/valen-parser/tests/snapshots/parser__error_class_missing_brace.snap
---
source: crates/valen-parser/tests/parser.rs
expression: "check(\"class Foo\")"
---
=== AST ===
[]
=== diagnostics ===
Error V0101 9..9: expected `;`
