crates/valen-parser/tests/snapshots/parser__error_class_missing_name.snap
---
source: crates/valen-parser/tests/parser.rs
expression: "check(\"class {}\")"
---
=== AST ===
[]
=== diagnostics ===
Error V0103 6..7: expected identifier
