crates/valen-parser/tests/snapshots/parser__error_missing_semicolon.snap
---
source: crates/valen-parser/tests/parser.rs
expression: "check(\"fn main() { let x = 1 x }\")"
---
=== AST ===
[]
=== diagnostics ===
Error V0102 22..23: expected `;`
