crates/valen-parser/tests/snapshots/parser__error_unexpected_top_level.snap
---
source: crates/valen-parser/tests/parser.rs
expression: "check(\"let x = 1;\")"
---
=== AST ===
[]
=== diagnostics ===
Error V0105 0..3: expected top-level item (e.g. `fn`, `class`, `enum`, `trait`, `impl`)
