crates/valen-parser/tests/snapshots/parser__fn_with_default_args.snap
---
source: crates/valen-parser/tests/parser.rs
assertion_line: 336
expression: "check(\"fn greet(msg: String = \\\"hi\\\", count: Int = 1) -> String { msg }\")"
---
=== AST ===
[
    Fn(
        FnDecl {
            annotations: [],
            visibility: Internal,
            name: "greet",
            generics: [],
            params: [
                Param {
                    name: "msg",
                    ty: Path(
                        TypePath {
                            segments: [
                                TypePathSegment {
                                    name: "String",
                                    generics: [],
                                    span: Span {
                                        start: 14,
                                        end: 20,
                                        file_id: FileId(
                                            0,
                                        ),
                                    },
                                },
                            ],
                            span: Span {
                                start: 14,
                                end: 20,
                                file_id: FileId(
                                    0,
                                ),
                            },
                        },
                    ),
                    mutable: false,
                    default: Some(
                        Literal(
                            String(
                                "hi",
                                Span {
                                    start: 23,
                                    end: 27,
                                    file_id: FileId(
                                        0,
                                    ),
                                },
                            ),
                        ),
                    ),
                    span: Span {
                        start: 9,
                        end: 27,
                        file_id: FileId(
                            0,
                        ),
                    },
                },
                Param {
                    name: "count",
                    ty: Path(
                        TypePath {
                            segments: [
                                TypePathSegment {
                                    name: "Int",
                                    generics: [],
                                    span: Span {
                                        start: 36,
                                        end: 39,
                                        file_id: FileId(
                                            0,
                                        ),
                                    },
                                },
                            ],
                            span: Span {
                                start: 36,
                                end: 39,
                                file_id: FileId(
                                    0,
                                ),
                            },
                        },
                    ),
                    mutable: false,
                    default: Some(
                        Literal(
                            Int(
                                1,
                                Span {
                                    start: 42,
                                    end: 43,
                                    file_id: FileId(
                                        0,
                                    ),
                                },
                            ),
                        ),
                    ),
                    span: Span {
                        start: 29,
                        end: 43,
                        file_id: FileId(
                            0,
                        ),
                    },
                },
            ],
            return_type: Some(
                Path(
                    TypePath {
                        segments: [
                            TypePathSegment {
                                name: "String",
                                generics: [],
                                span: Span {
                                    start: 48,
                                    end: 54,
                                    file_id: FileId(
                                        0,
                                    ),
                                },
                            },
                        ],
                        span: Span {
                            start: 48,
                            end: 54,
                            file_id: FileId(
                                0,
                            ),
                        },
                    },
                ),
            ),
            body: Some(
                Block {
                    stmts: [],
                    tail: Some(
                        Path(
                            Path {
                                segments: [
                                    PathSegment {
                                        name: "msg",
                                        double_colon: false,
                                        generics: [],
                                        span: Span {
                                            start: 57,
                                            end: 60,
                                            file_id: FileId(
                                                0,
                                            ),
                                        },
                                    },
                                ],
                                span: Span {
                                    start: 57,
                                    end: 60,
                                    file_id: FileId(
                                        0,
                                    ),
                                },
                            },
                        ),
                    ),
                    span: Span {
                        start: 55,
                        end: 62,
                        file_id: FileId(
                            0,
                        ),
                    },
                },
            ),
            is_open: false,
            is_override: false,
            is_abstract: false,
            is_unsafe: false,
            is_inline: false,
            span: Span {
                start: 0,
                end: 62,
                file_id: FileId(
                    0,
                ),
            },
        },
    ),
]
=== diagnostics ===
(none)
