crates/valen-parser/tests/snapshots/parser__fn_with_generic_type.snap
---
source: crates/valen-parser/tests/parser.rs
expression: "check(\"fn first(xs: List<Int>) -> Option<Int> { xs }\")"
---
=== AST ===
[
    Fn(
        FnDecl {
            visibility: Internal,
            name: "first",
            generics: [],
            params: [
                Param {
                    name: "xs",
                    ty: Path(
                        TypePath {
                            segments: [
                                TypePathSegment {
                                    name: "List",
                                    generics: [
                                        Path(
                                            TypePath {
                                                segments: [
                                                    TypePathSegment {
                                                        name: "Int",
                                                        generics: [],
                                                        span: Span {
                                                            start: 18,
                                                            end: 21,
                                                            file_id: FileId(
                                                                0,
                                                            ),
                                                        },
                                                    },
                                                ],
                                                span: Span {
                                                    start: 18,
                                                    end: 21,
                                                    file_id: FileId(
                                                        0,
                                                    ),
                                                },
                                            },
                                        ),
                                    ],
                                    span: Span {
                                        start: 13,
                                        end: 22,
                                        file_id: FileId(
                                            0,
                                        ),
                                    },
                                },
                            ],
                            span: Span {
                                start: 13,
                                end: 22,
                                file_id: FileId(
                                    0,
                                ),
                            },
                        },
                    ),
                    mutable: false,
                    span: Span {
                        start: 9,
                        end: 22,
                        file_id: FileId(
                            0,
                        ),
                    },
                },
            ],
            return_type: Some(
                Path(
                    TypePath {
                        segments: [
                            TypePathSegment {
                                name: "Option",
                                generics: [
                                    Path(
                                        TypePath {
                                            segments: [
                                                TypePathSegment {
                                                    name: "Int",
                                                    generics: [],
                                                    span: Span {
                                                        start: 34,
                                                        end: 37,
                                                        file_id: FileId(
                                                            0,
                                                        ),
                                                    },
                                                },
                                            ],
                                            span: Span {
                                                start: 34,
                                                end: 37,
                                                file_id: FileId(
                                                    0,
                                                ),
                                            },
                                        },
                                    ),
                                ],
                                span: Span {
                                    start: 27,
                                    end: 38,
                                    file_id: FileId(
                                        0,
                                    ),
                                },
                            },
                        ],
                        span: Span {
                            start: 27,
                            end: 38,
                            file_id: FileId(
                                0,
                            ),
                        },
                    },
                ),
            ),
            body: Some(
                Block {
                    stmts: [],
                    tail: Some(
                        Path(
                            Path {
                                segments: [
                                    PathSegment {
                                        name: "xs",
                                        turbofish: false,
                                        generics: [],
                                        span: Span {
                                            start: 41,
                                            end: 43,
                                            file_id: FileId(
                                                0,
                                            ),
                                        },
                                    },
                                ],
                                span: Span {
                                    start: 41,
                                    end: 43,
                                    file_id: FileId(
                                        0,
                                    ),
                                },
                            },
                        ),
                    ),
                    span: Span {
                        start: 39,
                        end: 45,
                        file_id: FileId(
                            0,
                        ),
                    },
                },
            ),
            is_open: false,
            is_override: false,
            is_abstract: false,
            span: Span {
                start: 0,
                end: 45,
                file_id: FileId(
                    0,
                ),
            },
        },
    ),
]
=== diagnostics ===
(none)
